Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67376

[REG 5.8->5.9][macOS] the maximum size of QWindow is not respected when resizing by pressing the maximizing button

XMLWordPrintable

    • macOS

      Testcase:

      #include <QGuiApplication>
      #include <QWindow>
      
      int main(int argc, char** argv)
      {
          QGuiApplication app(argc, argv);
      
          QWindow window;
          window.setFlags(Qt::CustomizeWindowHint | Qt::WindowTitleHint | Qt::WindowMinMaxButtonsHint);
          window.setMinimumSize(QSize(200, 200));
          window.setMaximumSize(QSize(400, 400));
          window.show();
      
          return app.exec();
      }
      

      Steps to reproduce:

      • run the sample attached.
      • press the 'maximize' button (green plus-sign button on the title bar).
        EXPECTED: the window is resized to be larger, but the size is limited by the maximum size set.
        ACTUAL: the window is resized to cover the whole screen.

        1. qtbug67376.zip
          1 kB
          Risto Sipola
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vestbo Tor Arne Vestbø
            risto.sipola Risto Sipola
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes