BTUC-18828: Workaround for QTBUG-67376

Maximizing and returning to normal window work as expected when the
windowWillUseStandardFrame:defaultFrame: method is removed completely
from the Cocoa platform plugins NSWindowDelegate implementation.

Change-Id: I46d78bcbac8724150bb439c48402b5360da8481b